{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 12,
  "lineage": "3b7f4e4a-bd89-4c61-8c57-82a96f1dc77d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sg-0web123456789abcd",
            "arn": "arn:aws:ec2:us-east-1:111122223333:security-group/sg-0web123456789abcd",
            "name": "web-sg",
            "description": "web tier",
            "vpc_id": "vpc-0a1b2c3d",
            "ingress": [
              {
                "from_port": 443,
                "to_port": 443,
                "protocol": "tcp",
                "cidr_blocks": [
                  "0.0.0.0/0"
                ]
              }
            ]
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sg-0db123456789abcde",
            "arn": "arn:aws:ec2:us-east-1:111122223333:security-group/sg-0db123456789abcde",
            "name": "db-sg",
            "description": "database tier",
            "vpc_id": "vpc-0a1b2c3d",
            "ingress": [
              {
                "from_port": 5432,
                "to_port": 5432,
                "protocol": "tcp",
                "cidr_blocks": [
                  "10.0.0.0/16"
                ]
              }
            ]
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}